# strava-connector

./: .gitignore  CLAUDE.md  README.md  auth.py  check.py  pyproject.toml  requirements.txt  sync.py  webhook_server.py
strava/: client.py  db.py  webhook.py
strava_connector.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_auth.py  test_client.py  test_db.py  test_webhook.py
