[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "strava-connector"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["click", "flask", "requests"]

[project.scripts]
strava-sync = "sync:main"
strava-webhook = "webhook_server:main"
strava-auth = "auth:main"

[tool.setuptools]
py-modules = ["sync", "webhook_server", "auth"]

[tool.setuptools.packages.find]
where = ["."]
include = ["strava*"]
